2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml: Bump MD version.

2007-09-20  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: Added reference change handlers to update the
	  referenced assembly list in web.config.

2007-09-12  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/XspOptionsPanelWidget.cs,
	  gtk-gui/AspNetAddIn.XspOptionsPanelWidget.cs, gtk-gui/gui.stetic: Fix
	  bugs from stetic conversion: panel status update handler and permissible
	  port range setting.
	* Project/AspNetAppProject.cs: Restructure execution code to handle errors
	  better and make it possible to set MONO_OPTIONS="--debug" when calling
	  xsp.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/XspOptionsPanel.cs, Gui/XspOptionsPanelWidget.cs, AspNetAddIn.glade,
	  gtk-gui/generated.cs,
	  gtk-gui/AspNetAddIn.AspNetConfigurationPanelWidget.cs,
	  gtk-gui/AspNetAddIn.XspOptionsPanelWidget.cs, gtk-gui/gui.stetic,
	  AspNetAddIn.mdp, Makefile.am: Migrate XspOptionsPanel from glade to
	  stetic.
	* Gui/AspNetConfigurationPanelWidget.cs,
	  Project/AspNetFileDescriptionTemplate.cs: Remove unused fields.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/ProjectFolderNodeBuilderExtension.cs, Project/AspNetCommands.cs,
	  AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am: Add a command/menu
	  for creating ASP.NET special directories.
	* Project/AspNetAppProject.cs: Add more WebSubtypes. Use GettextCatalog for
	  MessageService call. Add method for discovering non-existent special
	  ASP.NET directories.
	* Project/VerifyCodeBehindBuildStep.cs: Don't prevent compilation if
	  documents can't be parsed.

2007-09-10  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/AspNetAppProject.cs: Fire SetDefaultBuildAction only when adding
	  new files, not when deserialising the project. Add a "Code" WebSubtype.
	* AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am,